[gd_scene load_steps=18 format=3 uid="uid://chcc2b0uyli40"]

[ext_resource type="Script" path="res://scenes/ui/meta_upgrade_card.gd" id="1_t3xkf"]
[ext_resource type="PackedScene" uid="uid://nn4ef46yt1w6" path="res://scenes/component/random_stream_player_component.tscn" id="2_wp37l"]
[ext_resource type="AudioStream" uid="uid://dlrnurc803gx0" path="res://assets/audio/switch1.ogg" id="3_71mkj"]
[ext_resource type="AudioStream" uid="uid://bi66grxx8ymb1" path="res://assets/audio/switch2.ogg" id="4_ta6ub"]
[ext_resource type="AudioStream" uid="uid://8ajq88m4dtye" path="res://assets/audio/switch3.ogg" id="5_2wdfo"]
[ext_resource type="AudioStream" uid="uid://bdxiqqn5dm3xj" path="res://assets/audio/switch4.ogg" id="6_mv28o"]
[ext_resource type="AudioStream" uid="uid://cobx54qoxymw4" path="res://assets/audio/switch5.ogg" id="7_4dcm3"]
[ext_resource type="AudioStream" uid="uid://cnv4kdgu07kcf" path="res://assets/audio/switch6.ogg" id="8_2ru60"]
[ext_resource type="AudioStream" uid="uid://bd7lk07ejewqr" path="res://assets/audio/switch7.ogg" id="9_4r218"]
[ext_resource type="AudioStream" uid="uid://dhxi56i2thvov" path="res://assets/audio/switch8.ogg" id="10_6oc76"]
[ext_resource type="AudioStream" uid="uid://bj76p367ncknx" path="res://assets/audio/switch9.ogg" id="11_dliya"]
[ext_resource type="AudioStream" uid="uid://utgmh1psecid" path="res://assets/audio/switch10.ogg" id="12_3cfpp"]
[ext_resource type="Texture2D" uid="uid://duunf164khqch" path="res://scenes/game_object/exp_vial/exp_vial.png" id="13_rdwgi"]

[sub_resource type="Animation" id="Animation_bs8v7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_sf0b0"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2.14355, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CilckPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ua3ay"]
_data = {
"RESET": SubResource("Animation_bs8v7"),
"selected": SubResource("Animation_sf0b0")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enowo"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(170, 0)
pivot_offset = Vector2(60, 80)
script = ExtResource("1_t3xkf")

[node name="CilckPlayerComponent" parent="." instance=ExtResource("2_wp37l")]
streams = Array[AudioStream]([ExtResource("3_71mkj"), ExtResource("4_ta6ub"), ExtResource("5_2wdfo"), ExtResource("6_mv28o"), ExtResource("7_4dcm3"), ExtResource("8_2ru60"), ExtResource("9_4r218"), ExtResource("10_6oc76"), ExtResource("11_dliya"), ExtResource("12_3cfpp")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ua3ay")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 16
text = "我的大学"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "增加经验掉落率10%
"
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"BlueOutlineLabel"
text = "100/200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueOutlineLabel"
text = "x0"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = -4

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_enowo")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Control"]
layout_mode = 2
offset_left = -7.0
offset_top = -5.0
offset_right = 9.0
offset_bottom = 11.0
mouse_filter = 2
texture = ExtResource("13_rdwgi")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "购买"
